add primitive functions
